vault/bsc/probes/null_or_combine_no_narrow.expected.stderr
<probe>:10:16: error: nullable pointer cannot be dereferenced
        return *p;   // p NOT guaranteed non-null -> expect REJECT
               ^
1 error generated.
